@@ -107,6 +107,7 @@
   <ItemGroup>
     <Compile Include="Code\Settings\OptionsPanel.cs" />
     <Compile Include="Code\Settings\Settings.cs" />
+    <Compile Include="Code\Settings\UpdateNotification.cs" />
     <Compile Include="Code\XML\XML_Settings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Code\AI\NewOutsideConnectionAI.cs" />
